--- a/public/index.html
+++ b/public/index.html
@@ -38,15 +38,17 @@
   </nav>
 
   <div class="container mt-3">
-    <!-- <div class="product">
-      <div class="thumbnail" style="background-image: url('https://via.placeholder.com/350')"></div>
-      <div class="flex-grow-1 p-4">
-        <h5 class="title">아기다스 신발</h5>
-        <p class="date">2030년 1월 8일</p>
-        <p class="price">20000원</p>
-        <p class="float-end">♡0</p>
+    <div class="row">
+      <div class="col-md-8">
+        <input type="text" class="form-control" placeholder="상품명을 입력하세요" id="search-input">
       </div>
-    </div> -->
+      <div class="col-md-4">
+        <button class="btn btn-primary" id="search-button">검색</button>
+      </div>
+    </div>
+    <div id="product-list" class="mt-4">
+      <!-- 검색 결과가 여기에 표시됩니다. -->
+    </div>
   </div>  
 
   <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-app.js"></script>
@@ -99,8 +101,55 @@
         });
     });
     
-    // 데이터 정렬하여 가져오기
+    // 상품 검색 기능
+    document.getElementById('search-button').addEventListener('click', () => {
+      const searchQuery = document.getElementById('search-input').value.trim();
+      if (searchQuery) {
+        searchProducts(searchQuery);
+      }
+    });
+
+    function searchProducts(query) {
+      db.collection('product')
+        .where('제목', '>=', query)
+        .where('제목', '<=', query + '\uf8ff')
+        .get()
+        .then((querySnapshot) => {
+          const productList = document.getElementById('product-list');
+          productList.innerHTML = ''; // 기존 결과 제거
+
+          if (querySnapshot.empty) {
+            productList.innerHTML = '<p>검색 결과가 없습니다.</p>';
+          } else {
+            querySnapshot.forEach((doc) => {
+              const data = doc.data();
+              const formattedDate = new Date(data.날짜.seconds * 1000).toLocaleDateString('ko-KR', {
+                year: 'numeric',
+                month: 'long',
+                day: 'numeric'
+              });
+
+              const productHTML = `<div class="product mb-4">
+                <div class="thumbnail" style="background-image: url('${data.이미지}'); height: 200px; background-size: cover;"></div>
+                <div class="p-4">
+                  <h5 class="title"><a href="/detail.html?id=${doc.id}">${data.제목}</a></h5>
+                  <p class="date">${formattedDate}</p>
+                  <p class="price">${data.가격}원</p>
+                </div>
+              </div>`;
+              productList.insertAdjacentHTML('beforeend', productHTML);
+            });
+          }
+        })
+        .catch((error) => {
+          console.error('Error searching products:', error);
+        });
+    }
+
+    // 페이지 로드 시 모든 제품을 나열 (검색 전 기본 상태)
     db.collection('product').orderBy('날짜', 'desc').get().then((결과) => {
+      const productList = document.getElementById('product-list');
+      productList.innerHTML = ''; // 기존 결과 제거
       결과.forEach((doc) => {
         console.log(doc);
         const data = doc.data();
@@ -114,16 +163,15 @@
           day: 'numeric'
         });
 
-        var 템플릿 = `<div class="product">
-          <div class="thumbnail" style="background-image: url('${data.이미지}')"></div>
-          <div class="flex-grow-1 p-4">
+        var 템플릿 = `<div class="product mb-4">
+          <div class="thumbnail" style="background-image: url('${data.이미지}'); height: 200px; background-size: cover;"></div>
+          <div class="p-4">
             <h5 class="title"><a href="/detail.html?id=${doc.id}">${data.제목}</a></h5>
             <p class="date">${formattedDate}</p>
             <p class="price">${data.가격}원</p>
-            <p class="float-end">♡0</p>
           </div>
         </div>`;
-        $('.container').append(템플릿);
+        productList.insertAdjacentHTML('beforeend', 템플릿);
       });
     }).catch((error) => {
       console.error("Error getting documents: ", error);
